// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`renderLeaf snapshot matches expected output 1`] = `
"---
title: "Test Leaf"
aliases: []
type: LEAF
kind: concept
spine: myproj
status: draft
parent: "[[MYPROJ.ROOT - My Project]]"
children: []
attachments: []
created: 2026-03-26
modified: 2026-03-26
tags: []
---

## Breadcrumb

## Summary

## Content

## Connections

## Flags
"
`;

exports[`renderBranch snapshot matches expected output 1`] = `
"---
title: "Test Branch"
aliases: []
type: BRANCH
kind: concept
spine: myproj
status: draft
parent: "[[MYPROJ.ROOT - My Project]]"
children: []
attachments: []
created: 2026-03-26
modified: 2026-03-26
tags: []
---

## Breadcrumb

## Summary

## Content

## Connections

## Flags
"
`;

exports[`renderRoot snapshot matches expected output 1`] = `
"---
title: "My Project"
aliases: []
type: ROOT
kind: concept
spine: myproj
status: draft
parent: ""
children: []
attachments: []
created: 2026-03-26
modified: 2026-03-26
tags: []
---

## Summary

## Map

## Connections

## Flags
"
`;

exports[`renderOntology snapshot matches expected output 1`] = `
"---
type: ONTOLOGY
project: myproj
updated: 2026-03-26
---

## Relationship Types

| Type | Inverse | Symmetric | Description |
|------|---------|-----------|-------------|
| \`triggers\` | \`triggered-by\` | false | A causes B to occur |
| \`depends-on\` | \`depended-by\` | false | A requires B to function |
| \`implements\` | \`implemented-by\` | false | A is a concrete realisation of abstract concept B |
| \`extends\` | \`extended-by\` | false | A adds to or specialises B |
| \`compares-to\` | \`compares-to\` | true | A and B are analysed side-by-side |
| \`replaces\` | \`replaced-by\` | false | A supersedes B |
| \`feeds-data\` | \`fed-by\` | false | A supplies data to B |
| \`authenticates-via\` | \`authenticates\` | false | A uses B for authentication |
| \`contains\` | \`contained-by\` | false | A is the parent container of B |
| \`mitigates\` | \`mitigated-by\` | false | A reduces risk posed by B |
"
`;

exports[`renderVocab snapshot matches expected output 1`] = `
"---
type: VOCAB
project: myproj
updated: 2026-03-26
---

## L0 — Spine Roots

## L1 — Primary Branches

## L2 — Secondary Branches

## L3 — Leaves

## Shared Terms

## Orphan Terms
"
`;

exports[`renderTopk snapshot matches expected output 1`] = `
"---
type: TOPK
project: myproj
updated: 2026-03-26
---

## Limits

| Metric | Limit | Rationale |
|--------|-------|-----------|
| Connections per note | 7 | Prevents over-linking; forces pruning |
| Callout flags per note | 3 | Keeps flags scannable |
| BRANCH children | 7 | Keeps tree manageable |
| LEAF children | 5 | LEAF nodes should not branch deeply |

## Overflow Log

| Date | Note | Field | Count | Action |
|------|------|-------|-------|--------|

## Split History

| Date | Original | Split Into | Reason |
|------|----------|------------|--------|
"
`;

exports[`renderBase snapshot matches expected output 1`] = `
"filters:
  - file.inFolder("projects/myproj")
formulas:
  status_icon: 'if(status == "published", "✅", if(status == "review", "🔍", if(status == "draft", "📝", "⬜")))'
  last_updated: 'modified'
  link_count: 'file.outlinks.length'
views:
  - type: table
    name: All Notes
    order:
      - file.name
      - formula.status_icon
      - type
      - kind
      - spine
      - created
      - formula.last_updated
  - type: table
    name: Drafts
    filters:
      and:
        - 'status == "draft"'
    order:
      - file.name
      - type
      - kind
      - created
  - type: table
    name: Browse
    order:
      - file.name
      - type
      - kind
      - formula.link_count
      - formula.last_updated
"
`;

exports[`renderInbox snapshot matches expected output 1`] = `
"---
title: "My Capture"
captured: 2026-03-27
source: ""
target: ""
status: inbox
---

> [!todo] Triage
> - [ ] Identify note type (LEAF / BRANCH / ROOT)
> - [ ] Determine parent
> - [ ] Move to correct project folder
> - [ ] Delete this inbox copy

## Raw

<!-- Paste raw captured content here -->

## Placement Notes

<!-- Where should this go? What spine does it belong to? -->
"
`;

exports[`renderDaily snapshot matches expected output 1`] = `
"---
title: "2026-03-27"
type: daily-note
date: 2026-03-27
tags: [journal/daily]
---

## Ontology Work Log

### Entities Created

<!-- List new notes created today -->

### Schema Changes

<!-- Frontmatter changes, new relationship types, type renames -->

### Decisions

<!-- Architectural or naming decisions made -->

### Open Questions

<!-- Questions surfaced that need follow-up -->

## Triage

\`\`\`query
path:_inbox
\`\`\`

## Tasks

- [ ]

## Notes

<!-- Freeform notes for the day -->
"
`;

exports[`renderVaultOntology snapshot matches expected output 1`] = `
"---
title: "My Domain Ontology"
type: ONTOLOGY
spine: ""
status: active
created: 2026-03-27
modified: 2026-03-27
---

# Relationship Types

| \`type\` | Direction | \`inverse\` | Description |
|--------|-----------|-----------|-------------|
| \`triggers\` | A → B | \`triggered-by\` | A causes B to occur |
| \`depends-on\` | A → B | \`depended-by\` | A requires B to function |
| \`implements\` | A → B | \`implemented-by\` | A is a concrete realization of B |
| \`extends\` | A → B | \`extended-by\` | A adds to or specializes B |
| \`compares-to\` | A ↔ B | \`compares-to\` | A and B are compared or contrasted |
| \`replaces\` | A → B | \`replaced-by\` | A supersedes or deprecates B |
| \`feeds-data\` | A → B | \`fed-data-by\` | A supplies data consumed by B |
| \`authenticates-via\` | A → B | \`authenticated-by\` | A uses B for identity verification |
| \`contains\` | A → B | \`contained-by\` | A is a parent container of B |
| \`mitigates\` | A → B | \`mitigated-by\` | A reduces the risk or impact of B |

## Custom Types

<!-- Add project-specific relationship types below (include inverse column) -->

| \`type\` | Direction | \`inverse\` | Description |
|--------|-----------|-----------|-------------|
"
`;

exports[`renderVaultVocab snapshot matches expected output 1`] = `
"---
title: "My Domain Vocabulary"
type: VOCAB
spine: ""
status: active
created: 2026-03-27
modified: 2026-03-27
---

# Vocabulary

## L0 — Core Terms

<!-- Foundational terms required to understand the domain -->

## L1 — Primary Terms

<!-- Primary domain terms -->

## L2 — Secondary Terms

<!-- Supporting terms -->

## L3 — Peripheral Terms

<!-- Edge-case or rarely-used terms -->

## Shared Terms

<!-- Terms shared with other spines — link to canonical definition -->

## Orphan Terms

<!-- Terms not yet categorized -->
"
`;

exports[`renderVaultTopk snapshot matches expected output 1`] = `
"---
title: "My Domain Top-K"
type: TOPK
spine: ""
status: active
created: 2026-03-27
modified: 2026-03-27
---

# Top-K Limits

| Category | Limit | Current Count | Notes |
|----------|-------|---------------|-------|
| Root notes | 10 | 0 | Hard cap — split spine if exceeded |
| Branch notes per root | 20 | 0 | |
| Leaf notes per branch | 50 | 0 | |
| Relationship types | 15 | 10 | Includes 10 defaults |
| Vocab terms (total) | 200 | 0 | |

## Overflow Log

<!-- Record here when a limit is approached or exceeded -->

## Split History

<!-- Record spine splits performed to maintain top-k limits -->
"
`;
